css: Fix bullet position for right-aligned lists

--- a/_sass/_descriptions.scss
+++ b/_sass/_descriptions.scss
@@ -18,6 +18,7 @@
 }
 .description-content:not(:first-child) {
     text-align: right;
+    list-style-position: inside;
 }
 
 // When content is before icon
